--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,20 +51,20 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation "junit:junit:$rootProject.junit_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
-    testImplementation 'androidx.test.ext:junit:1.1.1'
-    testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "androidx.test.ext:junit:$rootProject.junit_test_version"
+    testImplementation "androidx.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
     androidTestImplementation "junit:junit:$rootProject.junit_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.junit_test_version"
+    androidTestImplementation "androidx.test:rules:$rootProject.support_test_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
     androidTestImplementation "org.mockito:mockito-core:$rootProject.mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$rootProject.mockito_version"
     androidTestImplementation "com.nhaarman:mockito-kotlin:$rootProject.mockito_kotlin_version"
 
 
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    kapt "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycle_version"
 
     implementation "com.umeng.umsdk:analytics:$rootProject.umsdk_analytics_version"
     implementation "com.umeng.umsdk:common:$rootProject.umsdk_common_version"
