--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,15 @@ buildscript {
         build_tools_version = '28.0.3'
 
         kotlin_version = '1.3.72'
-        android_plugin_version = '3.1.3'
-        support_library_version = '28.0.0'
+        androidx_appcompat_version = '1.1.0'
+        androidx_legacy_version = '1.0.0'
+        androidx_material_version = '1.1.0'
         constraint_layout_version = '1.1.3'
-        multidex_version = '1.0.3'
+        multidex_version = '2.0.1'
         junit_version = '4.13'
-        support_test_version = '1.0.2'
-        support_test_espresso_version = '3.0.2'
+        junit_test_version = '1.1.1'
+        support_test_version = '1.2.0'
+        support_test_espresso_version = '3.2.0'
         mockito_version = '3.3.3'
         mockito_kotlin_version = '1.6.0'
 
@@ -26,9 +28,9 @@ buildscript {
         rxbinding_version = '2.2.0'
         kotlin_coroutines_version = '1.3.6'
         dagger_version = '2.27'
-        lifecycle_version = '1.1.1'
-        navigation_version = '1.0.0'
-        databinding_version = '3.1.4'
+        lifecycle_version = '2.2.0'
+        navigation_version = '2.3.0-alpha06'
+        databinding_version = '3.6.3'
 
         rxpermissions_version = '0.10.2'
         kprogresshud_version = '1.2.0'
