--- a/oreo/build.gradle
+++ b/oreo/build.gradle
@@ -55,24 +55,24 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
-    api 'com.google.android.material:material:1.1.0'
-    api 'androidx.multidex:multidex:2.0.1'
+    api "androidx.appcompat:appcompat:$rootProject.androidx_appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$rootProject.constraint_layout_version"
+    api "androidx.legacy:legacy-support-v4:$rootProject.androidx_legacy_version"
+    api "com.google.android.material:material:$rootProject.androidx_material_version"
+    api "androidx.multidex:multidex:$rootProject.multidex_version"
     testImplementation "junit:junit:$rootProject.junit_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
-    testImplementation 'androidx.test.ext:junit:1.1.1'
-    testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "androidx.test.ext:junit:$rootProject.junit_test_version"
+    testImplementation "androidx.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
     androidTestImplementation "junit:junit:$rootProject.junit_version"
     androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.kotlin_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.junit_test_version"
+    androidTestImplementation "androidx.test:rules:$rootProject.support_test_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.support_test_espresso_version"
     androidTestImplementation "org.mockito:mockito-core:$rootProject.mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$rootProject.mockito_version"
     androidTestImplementation "com.nhaarman:mockito-kotlin:$rootProject.mockito_kotlin_version"
-    kaptAndroidTest 'androidx.databinding:databinding-compiler:3.6.3'
+    kaptAndroidTest "androidx.databinding:databinding-compiler:$rootProject.databinding_version"
 
     api "com.jakewharton.timber:timber:$rootProject.timber_version"
     api "com.squareup.okhttp3:okhttp:$rootProject.okhttp_version"
@@ -90,11 +90,11 @@ dependencies {
     api "com.google.dagger:dagger:$rootProject.dagger_version"
     api "com.google.dagger:dagger-android-support:$rootProject.dagger_version"
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    api 'androidx.lifecycle:lifecycle-runtime:2.2.0'
-    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
-    api 'androidx.navigation:navigation-fragment:2.3.0-alpha06'
-    api 'androidx.navigation:navigation-ui:2.3.0-alpha06'
+    api "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
+    api "androidx.lifecycle:lifecycle-runtime:$rootProject.lifecycle_version"
+    api "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycle_version"
+    api "androidx.navigation:navigation-fragment:$rootProject.navigation_version"
+    api "androidx.navigation:navigation-ui:$rootProject.navigation_version"
 
     api "com.github.tbruyelle:rxpermissions:$rootProject.rxpermissions_version"
     api "com.kaopiz:kprogresshud:$rootProject.kprogresshud_version"
